--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -36,14 +36,9 @@ kube-prometheus-stack:
         cpu: "200m"
         memory: "256Mi"
     
-    # Enable ingress for dev access
+    # Disable ingress temporarily due to webhook issues
     ingress:
-      enabled: true
-      ingressClassName: "nginx"
-      hosts:
-        - dev.grafana.local
-      annotations:
-        nginx.ingress.kubernetes.io/ssl-redirect: "false"
+      enabled: false
     
     # Add Loki datasource for dev
     additionalDataSources:
