--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -36,13 +36,13 @@ kube-prometheus-stack:
         cpu: "200m"
         memory: "256Mi"
     
-    # Enable ingress for dev access
+    # Enable ingress for dev access (no ingressClassName to bypass webhook)
     ingress:
       enabled: true
-      ingressClassName: "nginx"
       hosts:
         - dev.grafana.local
       annotations:
+        kubernetes.io/ingress.class: "nginx"
         nginx.ingress.kubernetes.io/ssl-redirect: "false"
     
     # Add Loki datasource for dev
