--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -36,11 +36,13 @@ kube-prometheus-stack:
         cpu: "200m"
         memory: "256Mi"
     
-    # Enable custom ingress for domain access
+    # Enable ingress for domain access
     ingress:
       enabled: true
       hosts:
         - dev.grafana.local
+      path: /
+      pathType: Prefix
       annotations:
         kubernetes.io/ingress.class: "nginx"
         nginx.ingress.kubernetes.io/ssl-redirect: "false"
