--- a/infra/config/dev/values.yaml
+++ b/infra/config/dev/values.yaml
@@ -71,13 +71,19 @@ storage:
 networking:
   # Ingress configuration for dev environment
   ingress:
-    enabled: true           # Enable ingress for external access
+    enabled: false          # Disabled due to NGINX webhook issues
     className: "nginx"      # Use nginx ingress controller
     tls: false             # Disable TLS in dev (simplicity)
     annotations:
       # Development-specific ingress annotations
+      kubernetes.io/ingress.class: "nginx"  # Use legacy annotation to avoid webhooks
       nginx.ingress.kubernetes.io/ssl-redirect: "false"
       nginx.ingress.kubernetes.io/rewrite-target: /
+  
+  # Grafana specific ingress (when NGINX is fixed)
+  grafana:
+    domain: "dev.grafana.local"
+    path: "/"
   
   # Service mesh configuration (if using Istio)
   serviceMesh:
