--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -36,9 +36,14 @@ kube-prometheus-stack:
         cpu: "200m"
         memory: "256Mi"
     
-    # Disable ingress due to broken nginx webhook
+    # Enable ingress using legacy annotation to bypass webhook
     ingress:
       enabled: true
+      hosts:
+        - dev.grafana.local
+      annotations:
+        kubernetes.io/ingress.class: "nginx"
+        nginx.ingress.kubernetes.io/ssl-redirect: "false"
     
     # Use NodePort for direct access
     # service:
